; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/nek_type_a/extr_mcp23017.c_expander_config.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/nek_type_a/extr_mcp23017.c_expander_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EXPANDER_REG_IODIRA = common dso_local global i32 0, align 4
@EXPANDER_REG_IODIRB = common dso_local global i32 0, align 4
@EXPANDER_REG_GPPUA = common dso_local global i32 0, align 4
@EXPANDER_REG_GPPUB = common dso_local global i32 0, align 4
@EXPANDER_REG_GPINTENA = common dso_local global i32 0, align 4
@EXPANDER_REG_GPINTENB = common dso_local global i32 0, align 4
@EXPANDER_REG_IPOLA = common dso_local global i32 0, align 4
@EXPANDER_REG_IPOLB = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @expander_config() #0 {
  %1 = load i32, i32* @EXPANDER_REG_IODIRA, align 4
  %2 = call i32 @expander_write(i32 %1, i32 255)
  %3 = load i32, i32* @EXPANDER_REG_IODIRB, align 4
  %4 = call i32 @expander_write(i32 %3, i32 255)
  %5 = load i32, i32* @EXPANDER_REG_GPPUA, align 4
  %6 = call i32 @expander_write(i32 %5, i32 255)
  %7 = load i32, i32* @EXPANDER_REG_GPPUB, align 4
  %8 = call i32 @expander_write(i32 %7, i32 255)
  %9 = load i32, i32* @EXPANDER_REG_GPINTENA, align 4
  %10 = call i32 @expander_write(i32 %9, i32 0)
  %11 = load i32, i32* @EXPANDER_REG_GPINTENB, align 4
  %12 = call i32 @expander_write(i32 %11, i32 0)
  %13 = load i32, i32* @EXPANDER_REG_IPOLA, align 4
  %14 = call i32 @expander_write(i32 %13, i32 0)
  %15 = load i32, i32* @EXPANDER_REG_IPOLB, align 4
  %16 = call i32 @expander_write(i32 %15, i32 0)
  ret void
}

declare dso_local i32 @expander_write(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
